--- a/wwwroot/package.json
+++ b/wwwroot/package.json
@@ -6,13 +6,18 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "express": "~3.4.8",
-    "static-favicon": "~1.0.0",
-    "morgan": "~1.0.0",
-    "cookie-parser": "~1.0.1",
-    "body-parser": "~1.0.0",
-    "debug": "~0.7.4",
-    "jade": "~1.3.0",
-    "less-middleware": "0.1.15"
+    "express": "3.18.2",
+    "static-favicon": "1.0.0",
+    "morgan": "1.0.0",
+    "cookie-parser": "1.0.1",
+    "body-parser": "1.0.0",
+    "debug": "0.7.4",
+    "jade": "0.35.0",
+    "less-middleware": "0.1.15",
+    "joi": "5.1.0",
+    "mongoose": "3.8.14",
+    "mongoose-filter-denormalize": "0.1.0",
+    "express-bunyan-logger": "0.1.2",
+    "connect-redis": "1.4.5"
   }
 }
