--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,4 +11,7 @@ services:
       - mongodata
     ports:
       - "27017:27017"
-    command: --smallfiles --rest --auth
+    # TODO: put back --auth flag and set up users
+    # command: --smallfiles --rest --auth
+    # NOTE: this is not secure!
+    command: --smallfiles --rest
