--- a/wwwroot/package.json
+++ b/wwwroot/package.json
@@ -19,5 +19,10 @@
     "mongoose-filter-denormalize": "0.1.0",
     "morgan": "1.7.0",
     "serve-favicon": "~2.3.0"
+  },
+  "devDependencies": {
+    "expectations": "^0.7.1",
+    "mocha": "^3.2.0",
+    "supertest": "^3.0.0"
   }
 }
